update view and table admin

--- a/package.json
+++ b/package.json
@@ -21,14 +21,21 @@
     "@mui/lab": "5.0.0-alpha.172",
     "@mui/material": "5.16.4",
     "@mui/material-nextjs": "5.16.4",
+    "@tanstack/match-sorter-utils": "^8.19.4",
+    "@tanstack/react-table": "^8.20.5",
+    "apexcharts": "^3.54.0",
     "classnames": "2.5.1",
+    "jspdf": "^2.5.2",
+    "keen-slider": "^6.8.6",
     "next": "14.2.5",
     "react": "18.3.1",
+    "react-apexcharts": "^1.4.1",
     "react-colorful": "5.6.1",
     "react-dom": "18.3.1",
     "react-perfect-scrollbar": "1.5.8",
     "react-use": "17.5.1",
-    "server-only": "0.0.1"
+    "server-only": "0.0.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@iconify/json": "2.2.230",
