--- a/package.json
+++ b/package.json
@@ -18,15 +18,16 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@floating-ui/react": "0.26.20",
-    "@mui/icons-material": "^6.1.3",
+    "@mui/icons-material": "^5.0.0",
     "@mui/lab": "5.0.0-alpha.172",
-    "@mui/material": "^6.1.3",
+    "@mui/material": "^5.16.7",
     "@mui/material-nextjs": "5.16.4",
     "@nextui-org/button": "^2.0.38",
     "@tanstack/match-sorter-utils": "^8.19.4",
     "@tanstack/react-table": "^8.20.5",
     "apexcharts": "^3.54.0",
     "classnames": "2.5.1",
+    "firebase": "^10.14.1",
     "jspdf": "^2.5.2",
     "keen-slider": "^6.8.6",
     "next": "14.2.5",
