--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@mui/material": "^5.16.7",
     "@mui/material-nextjs": "5.16.4",
     "@nextui-org/button": "^2.0.38",
+    "@tabler/icons-react": "^3.19.0",
     "@tanstack/match-sorter-utils": "^8.19.4",
     "@tanstack/react-table": "^8.20.5",
+    "aos": "^3.0.0-beta.6",
     "apexcharts": "^3.54.0",
     "classnames": "2.5.1",
     "firebase": "^10.14.1",
@@ -46,6 +48,7 @@
     "@iconify/tools": "4.0.4",
     "@iconify/types": "2.0.0",
     "@iconify/utils": "2.1.25",
+    "@types/aos": "^3.0.7",
     "@types/node": "^20.14.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
